# jupyter-docker

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  INSTRUCTIONS.md  README.md  build-all.sh  justfile  pyproject.toml
.github/actions/build-and-test/: action.yml
.github/workflows/: ci.yml
.serena/: project.yml
data/: README.md
examples/: 01_numpy_scipy_basics.ipynb  01_numpy_scipy_basics.py  02_pandas_data_analysis.ipynb  02_pandas_data_analysis.py  03_matplotlib_seaborn_viz.ipynb  03_matplotlib_seaborn_viz.py  04_plotly_interactive.ipynb  04_plotly_interactive.py  05_bokeh_holoviews.ipynb  05_bokeh_holoviews.py  06_geospatial.ipynb  06_geospatial.py  07_timeseries_analysis.ipynb  07_timeseries_analysis.py  08_data_io_serialization.ipynb  08_data_io_serialization.py  09_machine_learning.ipynb  09_machine_learning.py  10_deep_learning_pytorch.ipynb  10_deep_learning_pytorch.py  11_deep_learning_tensorflow.ipynb  11_deep_learning_tensorflow.py  12_image_processing.ipynb  12_image_processing.py  13_object_detection_yolo.ipynb  13_object_detection_yolo.py  14_nlp_text_analysis.ipynb  14_nlp_text_analysis.py  15_audio_analysis.ipynb  15_audio_analysis.py  16_altair_panel_viz.ipynb  16_altair_panel_viz.py  17_scipy_signal_processing.ipynb  17_scipy_signal_processing.py  18_sqlalchemy_database.ipynb  18_sqlalchemy_database.py  19_speech_processing.ipynb  19_speech_processing.py  20_face_analysis.ipynb  20_face_analysis.py
notebooks/: README.md
scripts/: bake_models.sh  gen_targets.py  verify_imports.py
targets/: matrix.toml
targets/audio/: pyproject.toml  verify_imports.py
targets/base/: pyproject.toml  verify_imports.py
targets/dataio/: pyproject.toml  verify_imports.py
targets/deeplearn/: pyproject.toml  verify_imports.py
targets/face/: pyproject.toml  verify_imports.py
targets/full/: pyproject.toml  verify_imports.py
targets/geospatial/: pyproject.toml  verify_imports.py
targets/ml/: pyproject.toml  verify_imports.py
targets/nlp/: pyproject.toml  verify_imports.py
targets/scientific/: pyproject.toml  verify_imports.py
targets/speech/: pyproject.toml  verify_imports.py
targets/timeseries/: pyproject.toml  verify_imports.py
targets/vision/: pyproject.toml  verify_imports.py
targets/visualization/: pyproject.toml  verify_imports.py
tests/: conftest.py  pytest.ini  test_examples.py  test_gen_targets.py
