[project]
name = "datascience-audio"
version = "1.0.0"
description = "Audio processing and analysis"
requires-python = ">=3.13"

dependencies = [
    # PyTorch audio
    "torchaudio>=2.1.0",

    # Audio analysis
    "librosa>=0.10.0",

    # Audio I/O
    "soundfile>=0.12.0",
    "pydub>=0.25.0",

    # Audio features
    "audioread>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
