[project]
name = "datascience-base"
version = "1.0.0"
description = "Base Python environment with common utilities for data science"
requires-python = ">=3.13"

dependencies = [
    # Interactive Python
    "ipython>=8.18.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",

    # JSON libraries (fast)
    "orjson>=3.9.0",
    "ujson>=5.9.0",
    "simplejson>=3.19.0",

    # XML/HTML processing
    "lxml>=5.0.0",
    "xmltodict>=0.13.0",
    "beautifulsoup4>=4.12.0",

    # YAML
    "pyyaml>=6.0.0",

    # HTTP clients
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",

    # Data validation
    "pydantic>=2.5.0",

    # Utilities
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "joblib>=1.3.0",
    "toolz>=0.12.0",
    "more-itertools>=10.1.0",

    # Date/time
    "python-dateutil>=2.8.0",
    "pytz>=2024.1",
    "pendulum>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
