[project]
name = "datascience-dataio"
version = "1.0.0"
description = "Data I/O for Parquet, HDF5, Excel, and databases"
requires-python = ">=3.13"

dependencies = [
    # Columnar formats
    "pyarrow>=14.0.0",
    "fastparquet>=2023.10.0",

    # HDF5
    "h5py>=3.10.0",
    "tables>=3.9.0",

    # Excel
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",

    # Database
    "sqlalchemy>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
