[project]
name = "datascience-deeplearn"
version = "1.0.0"
description = "Deep learning with PyTorch and TensorFlow"
requires-python = ">=3.13"

dependencies = [
    # PyTorch ecosystem
    "torch>=2.1.0",
    "torchvision>=0.16.0",

    # TensorFlow ecosystem
    "tensorflow>=2.15.0",
    "keras>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
