[project]
name = "datascience-deeplearn"
version = "1.0.0"
description = "Deep learning with PyTorch and TensorFlow"
requires-python = ">=3.13"

dependencies = [
    # ========================================
    # BASE dependencies
    # ========================================
    # Interactive Python
    "ipython==9.9.0",
    "jupyter==1.1.1",
    "jupyterlab==4.5.2",

    # JSON libraries
    "orjson==3.11.5",
    "ujson==5.11.0",
    "simplejson==3.20.2",

    # XML/HTML processing
    "lxml==6.0.2",
    "xmltodict==1.0.2",
    "beautifulsoup4==4.14.3",

    # YAML
    "pyyaml==6.0.3",

    # HTTP clients
    "requests==2.32.5",
    "httpx==0.28.1",
    "aiohttp==3.13.3",

    # Data validation
    "pydantic==2.12.5",

    # Utilities
    "tqdm==4.67.1",
    "loguru==0.7.3",
    "python-dotenv==1.2.1",
    "joblib==1.5.3",
    "toolz==1.1.0",
    "more-itertools==10.8.0",

    # Date/time
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pendulum==3.1.0",

    # ========================================
    # SCIENTIFIC dependencies
    # ========================================
    "numpy==2.4.1",
    "scipy==1.17.0",
    "pandas==2.3.3",
    "statsmodels==0.14.6",
    "sympy==1.14.0",

    # ========================================
    # ML dependencies
    # ========================================
    "scikit-learn==1.8.0",
    "xgboost==3.1.3",
    "lightgbm==4.6.0",
    "imbalanced-learn==0.14.1",
    "optuna==4.6.0",

    # ========================================
    # DEEPLEARN dependencies
    # ========================================
    # PyTorch ecosystem
    "torch==2.9.1",
    "torchvision==0.24.1",

    # TensorFlow ecosystem
    "tensorflow==2.20.0",
    "keras==3.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
