[project]
name = "datascience-full"
version = "1.0.0"
description = "Complete data science environment with all libraries"
requires-python = ">=3.13"

dependencies = [
    # ============================================
    # BASE: Common utilities
    # ============================================
    # Interactive Python
    "ipython>=8.18.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",

    # JSON libraries
    "orjson>=3.9.0",
    "ujson>=5.9.0",
    "simplejson>=3.19.0",

    # XML/HTML
    "lxml>=5.0.0",
    "xmltodict>=0.13.0",
    "beautifulsoup4>=4.12.0",

    # YAML
    "pyyaml>=6.0.0",

    # HTTP
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",

    # Validation
    "pydantic>=2.5.0",

    # Utilities
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "joblib>=1.3.0",
    "toolz>=0.12.0",
    "more-itertools>=10.1.0",

    # Date/time
    "python-dateutil>=2.8.0",
    "pytz>=2024.1",
    "pendulum>=3.0.0",

    # ============================================
    # SCIENTIFIC: Core numerical computing
    # ============================================
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",
    "statsmodels>=0.14.0",
    "sympy>=1.12.0",

    # ============================================
    # VISUALIZATION: Charts and dashboards
    # ============================================
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "bokeh>=3.3.0",
    "holoviews>=1.18.0",
    "hvplot>=0.9.0",
    "panel>=1.3.0",
    "altair>=5.2.0",

    # ============================================
    # DATAIO: Data formats and databases
    # ============================================
    "pyarrow>=14.0.0",
    "fastparquet>=2023.10.0",
    "h5py>=3.10.0",
    "tables>=3.9.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "sqlalchemy>=2.0.0",

    # ============================================
    # ML: Classical machine learning
    # ============================================
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "imbalanced-learn>=0.11.0",
    "optuna>=3.4.0",

    # ============================================
    # DEEPLEARN: Neural networks
    # ============================================
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "tensorflow>=2.15.0",
    "keras>=3.0.0",

    # ============================================
    # VISION: Image processing
    # ============================================
    "pillow>=10.1.0",
    "opencv-python-headless>=4.8.0",
    "scikit-image>=0.22.0",
    "imageio>=2.33.0",
    "ultralytics>=8.0.0",

    # ============================================
    # AUDIO: Audio processing
    # ============================================
    "torchaudio>=2.1.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.0",
    "audioread>=3.0.0",

    # ============================================
    # GEOSPATIAL: Maps and GIS
    # ============================================
    "cartopy>=0.22.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "folium>=0.15.0",
    "geoviews>=1.11.0",

    # ============================================
    # TIMESERIES: Time series analysis
    # ============================================
    "tsfresh>=0.20.0",
    "sktime>=0.24.0",
    "pmdarima>=2.0.0",
    "prophet>=1.1.0",

    # ============================================
    # NLP: Natural language processing
    # ============================================
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "transformers>=4.36.0",
    "sentence-transformers>=2.2.0",
    "tokenizers>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
