[project]
name = "datascience-full"
version = "1.0.0"
description = "Complete data science environment with all libraries"
requires-python = ">=3.13"

dependencies = [
    # ============================================
    # BASE: Common utilities
    # ============================================
    # Interactive Python
    "ipython==9.9.0",
    "jupyter==1.1.1",
    "jupyterlab==4.5.2",

    # JSON libraries
    "orjson==3.11.5",
    "ujson==5.11.0",
    "simplejson==3.20.2",

    # XML/HTML
    "lxml==6.0.2",
    "xmltodict==1.0.2",
    "beautifulsoup4==4.14.3",

    # YAML
    "pyyaml==6.0.3",

    # HTTP
    "requests==2.32.5",
    "httpx==0.28.1",
    "aiohttp==3.13.3",

    # Validation
    "pydantic==2.12.5",

    # Utilities
    "tqdm==4.67.1",
    "loguru==0.7.3",
    "python-dotenv==1.2.1",
    "joblib==1.5.3",
    "toolz==1.1.0",
    "more-itertools==10.8.0",

    # Date/time
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pendulum==3.1.0",

    # ============================================
    # SCIENTIFIC: Core numerical computing
    # ============================================
    # numpy 2.3.x required for numba compatibility (numba requires numpy<2.4)
    "numpy==2.3.5",
    "scipy==1.17.0",
    "pandas==2.3.3",
    "statsmodels==0.14.6",
    "sympy==1.14.0",

    # ============================================
    # VISUALIZATION: Charts and dashboards
    # ============================================
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "plotly==6.5.2",
    "bokeh==3.8.2",
    "holoviews==1.22.1",
    "hvplot==0.12.2",
    "panel==1.8.5",
    "altair==6.0.0",

    # ============================================
    # DATAIO: Data formats and databases
    # ============================================
    "pyarrow==23.0.0",
    "fastparquet==2025.12.0",
    "h5py==3.15.1",
    "tables==3.10.2",
    "openpyxl==3.1.5",
    "xlrd==2.0.2",
    "sqlalchemy==2.0.45",

    # ============================================
    # ML: Classical machine learning
    # ============================================
    # scikit-learn 1.7.x required for sktime compatibility (sktime requires <1.8.0)
    "scikit-learn==1.7.2",
    "xgboost==3.1.3",
    "lightgbm==4.6.0",
    "imbalanced-learn==0.14.1",
    "optuna==4.6.0",

    # ============================================
    # DEEPLEARN: Neural networks
    # ============================================
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tensorflow==2.20.0",
    "keras==3.13.1",
    # tf-keras for transformers compatibility with Keras 3
    "tf-keras",

    # ============================================
    # VISION: Image processing
    # ============================================
    "pillow==12.1.0",
    "opencv-python-headless==4.13.0.90",
    "scikit-image==0.26.0",
    "imageio==2.37.2",
    "ultralytics==8.4.5",

    # ============================================
    # AUDIO: Audio processing
    # ============================================
    "torchaudio==2.9.1",
    "librosa==0.11.0",
    # numba for Python 3.13 compatibility (librosa/tsfresh dependency)
    "numba>=0.60.0",
    "soundfile==0.13.1",
    "pydub==0.25.1",
    "audioread==3.1.0",

    # ============================================
    # GEOSPATIAL: Maps and GIS
    # ============================================
    "cartopy==0.25.0",
    "geopandas==1.1.2",
    "shapely==2.1.2",
    "pyproj==3.7.2",
    "folium==0.20.0",
    "geoviews==1.15.1",

    # ============================================
    # TIMESERIES: Time series analysis
    # ============================================
    "tsfresh==0.21.1",
    "sktime==0.40.1",
    "pmdarima==2.1.1",
    "prophet==1.2.1",

    # ============================================
    # NLP: Natural language processing
    # ============================================
    "spacy==3.8.11",
    "nltk==3.9.2",
    "transformers==4.57.6",
    "sentence-transformers==5.2.0",
    "tokenizers==0.22.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
