[project]
name = "datascience-geospatial"
version = "1.0.0"
description = "Geospatial analysis and mapping"
requires-python = ">=3.13"

dependencies = [
    # Map projections
    "cartopy>=0.22.0",

    # Geospatial DataFrames
    "geopandas>=0.14.0",

    # Geometry
    "shapely>=2.0.0",
    "pyproj>=3.6.0",

    # Interactive maps
    "folium>=0.15.0",

    # HoloViews geographic
    "geoviews>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
