[project]
name = "datascience-geospatial"
version = "1.0.0"
description = "Geospatial analysis and mapping"
requires-python = ">=3.13"

dependencies = [
    # ========================================
    # BASE dependencies
    # ========================================
    # Interactive Python
    "ipython==9.9.0",
    "jupyter==1.1.1",
    "jupyterlab==4.5.2",

    # JSON libraries
    "orjson==3.11.5",
    "ujson==5.11.0",
    "simplejson==3.20.2",

    # XML/HTML processing
    "lxml==6.0.2",
    "xmltodict==1.0.2",
    "beautifulsoup4==4.14.3",

    # YAML
    "pyyaml==6.0.3",

    # HTTP clients
    "requests==2.32.5",
    "httpx==0.28.1",
    "aiohttp==3.13.3",

    # Data validation
    "pydantic==2.12.5",

    # Utilities
    "tqdm==4.67.1",
    "loguru==0.7.3",
    "python-dotenv==1.2.1",
    "joblib==1.5.3",
    "toolz==1.1.0",
    "more-itertools==10.8.0",

    # Date/time
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pendulum==3.1.0",

    # ========================================
    # GEOSPATIAL dependencies (needs numpy and matplotlib)
    # ========================================
    "numpy==2.4.1",
    "matplotlib==3.10.8",

    # Map projections
    "cartopy==0.25.0",

    # Geospatial DataFrames
    "geopandas==1.1.2",

    # Geometry
    "shapely==2.1.2",
    "pyproj==3.7.2",

    # Interactive maps
    "folium==0.20.0",

    # HoloViews geographic
    "geoviews==1.15.1",
    # Testing
    "pytest",
    "pytest-timeout",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
