[project]
name = "datascience-ml"
version = "1.0.0"
description = "Classical machine learning with scikit-learn, XGBoost, and LightGBM"
requires-python = ">=3.13"

dependencies = [
    # Core ML
    "scikit-learn>=1.3.0",

    # Gradient boosting
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",

    # Imbalanced data
    "imbalanced-learn>=0.11.0",

    # Hyperparameter optimization
    "optuna>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
