[project]
name = "datascience-nlp"
version = "1.0.0"
description = "Natural language processing"
requires-python = ">=3.13"

dependencies = [
    # NLP frameworks
    "spacy>=3.7.0",

    # Classic NLP
    "nltk>=3.8.0",

    # Transformers
    "transformers>=4.36.0",

    # Sentence embeddings
    "sentence-transformers>=2.2.0",

    # Tokenization
    "tokenizers>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
