[project]
name = "datascience-scientific"
version = "1.0.0"
description = "Scientific computing with NumPy, SciPy, and Pandas"
requires-python = ">=3.13"

dependencies = [
    # Core scientific computing
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",

    # Statistical modeling
    "statsmodels>=0.14.0",

    # Symbolic mathematics
    "sympy>=1.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
