[project]
name = "datascience-timeseries"
version = "1.0.0"
description = "Time series analysis and forecasting"
requires-python = ">=3.13"

dependencies = [
    # Feature extraction
    "tsfresh>=0.20.0",

    # Time series ML
    "sktime>=0.24.0",

    # ARIMA
    "pmdarima>=2.0.0",

    # Forecasting
    "prophet>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
