[project]
name = "datascience-vision"
version = "1.0.0"
description = "Computer vision and image processing"
requires-python = ">=3.13"

dependencies = [
    # Image processing
    "pillow>=10.1.0",
    "opencv-python-headless>=4.8.0",
    "scikit-image>=0.22.0",
    "imageio>=2.33.0",

    # Object detection
    "ultralytics>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
