[project]
name = "datascience-vision"
version = "1.0.0"
description = "Computer vision and image processing"
requires-python = ">=3.13"

dependencies = [
    # ========================================
    # BASE dependencies
    # ========================================
    # Interactive Python
    "ipython==9.9.0",
    "jupyter==1.1.1",
    "jupyterlab==4.5.2",

    # JSON libraries
    "orjson==3.11.5",
    "ujson==5.11.0",
    "simplejson==3.20.2",

    # XML/HTML processing
    "lxml==6.0.2",
    "xmltodict==1.0.2",
    "beautifulsoup4==4.14.3",

    # YAML
    "pyyaml==6.0.3",

    # HTTP clients
    "requests==2.32.5",
    "httpx==0.28.1",
    "aiohttp==3.13.3",

    # Data validation
    "pydantic==2.12.5",

    # Utilities
    "tqdm==4.67.1",
    "loguru==0.7.3",
    "python-dotenv==1.2.1",
    "joblib==1.5.3",
    "toolz==1.1.0",
    "more-itertools==10.8.0",

    # Date/time
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pendulum==3.1.0",

    # ========================================
    # VISION dependencies (needs numpy)
    # ========================================
    "numpy==2.4.1",

    # Image processing
    "pillow==12.1.0",
    "opencv-python-headless==4.13.0.90",
    "scikit-image==0.26.0",
    "imageio==2.37.2",

    # Object detection
    "ultralytics==8.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
