[project]
name = "datascience-visualization"
version = "1.0.0"
description = "Data visualization with Matplotlib, Seaborn, Plotly, and Bokeh"
requires-python = ">=3.13"

dependencies = [
    # Static plotting
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # Interactive plotting
    "plotly>=5.18.0",
    "bokeh>=3.3.0",

    # Declarative visualization
    "holoviews>=1.18.0",
    "hvplot>=0.9.0",
    "panel>=1.3.0",
    "altair>=5.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
